whitespace fixes

--- a/public/less/application.less
+++ b/public/less/application.less
@@ -94,7 +94,8 @@ h2 img,
   margin-left:5px;
 }
 
-p.center img {
+p.center img,
+.btn {
   margin-right:5px;
 }
 
